<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="trinadh.app.findgbt.MainActivity" >

    <Button
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="56dp"
        android:text="@string/track" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/track"
        android:layout_alignBottom="@+id/track"
        android:layout_alignLeft="@+id/towards_list"
        android:text="@string/gobutton" />

    <Spinner
        android:id="@+id/towards_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/track"
        android:layout_alignRight="@+id/track"
        android:layout_marginBottom="51dp"
        android:background="#E6FFE6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/towards_list"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/towards"
        android:textColor="#242400"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/route_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/towards_list"
        android:layout_alignStart="@+id/towards_list"
        android:layout_marginBottom="27dp"
        android:background="#E6FFE6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/route_list"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/select_bus"
        android:textColor="#242400"
        android:textSize="20sp" />

    <Button
        android:id="@+id/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:text="@string/schedule" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/schedule"
        android:layout_alignBottom="@+id/schedule"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/exit" />

</RelativeLayout>